Fix overflow

--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -110,6 +110,7 @@
   min-height: 1rem;
   max-height: 22rem;
   padding: 1rem;
+  overflow-y: auto;
 
   font-family: 'Inter', sans-serif;
   font-weight: bold;
